--- a/Kotlin/WebViewPractice/app/src/main/res/layout/activity_splash.xml
+++ b/Kotlin/WebViewPractice/app/src/main/res/layout/activity_splash.xml
@@ -7,9 +7,9 @@
     tools:context=".SplashActivity">
 
     <ImageView
-        android:layout_width="355dp"
-        android:layout_height="56dp"
-        android:background="@drawable/minepage"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:background="@drawable/velog"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
