--- a/Kotlin/Memo/app/src/main/res/layout/activity_main.xml
+++ b/Kotlin/Memo/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="20dp"
@@ -36,6 +37,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
+        android:id="@+id/btAdd"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Add"
