--- a/Kotlin/Memo/app/src/main/res/layout/list_memo.xml
+++ b/Kotlin/Memo/app/src/main/res/layout/list_memo.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
+    android:id="@+id/root"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -15,6 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
+        android:id="@+id/tvmemo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="기말고사 공부하기"
